[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urlhealth"
version = "0.1.0"
description = "Check whether a URL is live, dead, or likely hallucinated, with Wayback Machine fallback"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Delip Rao" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/delip/urlhealth"
Repository = "https://github.com/delip/urlhealth"
Issues = "https://github.com/delip/urlhealth/issues"

[tool.hatch.build.targets.sdist]
exclude = ["CLAUDE.md"]

[tool.hatch.build.targets.wheel]
packages = ["urlhealth"]
